2006-09-08  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-passphrase.c: Close passphrase prompt on 
    <ESC> key press. Fixes #354332
    
2006-09-07  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * src/seahorse-key-properties.c:
    * src/seahorse-pgp-private-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-key-properties.glade: Add descriptive labels and 
    make the GUI of key properties dialogs simpler. Fixes #353845
    
2006-09-04  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-source.c: Create .ssh directory
    if it doesn't exist. Fixes #354251
    
2006-09-04  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-source.h:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-unknown-key.c:
    * libseahorse/seahorse-unknown-source.c:
    * src/seahorse-key-manager-store.c: Get key descriptions via keys 
    properties rather than a big #ifdef
    
2006-09-04  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus/Makefile.am: Fixed problem building seahorse-tool
    Patch from Christopher Taylor. Similar to checkin on 2006-09-01 
    Fixes #354245
    
2006-09-02  Nate Nielsen  <nielsen@memberwebs.com>
    
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-pgp-key.c:
    * src/seahorse-key-manager-store.c: Remove punctuation from the main 
    display and pretty up the display of email addresses and comments.
    Add a little padding between columns they don't run into each other.
    Move expander to the Name column where it makes more sense.
    