@@ -84,8 +84,6 @@ src/seahorse-pgp-private-key-properties.glade
 src/seahorse-pgp-public-key-properties.glade
 src/seahorse-pgp-signature.desktop.in
 src/seahorse-photos.c
-src/seahorse-preferences.c
-src/seahorse-preferences.glade
 src/seahorse-revoke.c
 src/seahorse-revoke.glade
 src/seahorse-sign.c
