@@ -24,6 +24,12 @@
             <menuitem action="remote-sync"/>
             <menuitem action="remote-upload-ssh"/>
         </menu>
+        <menu name="View" action="view-menu">
+            <menuitem action="view-type"/>
+            <menuitem action="view-expires"/>
+            <menuitem action="view-trust"/>
+            <menuitem action="view-validity"/>
+        </menu>
         <menu name="Help" action="help-menu">
             <menuitem action="help-show"/>
             <menuitem action="app-about"/>
