@@ -36,60 +36,13 @@
  **/
 void
 seahorse_preferences_show (const gchar *tabid)
-{	
-	SeahorseWidget *swidget;
-    GtkWidget *label;
+{   
+    SeahorseWidget *swidget = seahorse_prefs_new ();
     GtkWidget *tab;
-    GtkWidget *box;
-	GtkWidget *widget;
-    GtkWidget *label2;
-    GtkWidget *align;
-	
-    swidget = seahorse_prefs_new ();
     
-    label = gtk_label_new (_("Key Manager"));
-
-    tab = gtk_vbox_new (FALSE, 12); 
-    gtk_container_set_border_width (GTK_CONTAINER (tab), 12);
-    
-    label2 = gtk_label_new ("");
-    gtk_label_set_markup (GTK_LABEL (label2), g_markup_printf_escaped
-		   ("<b>%s</b>", "Visible Columns"));
-
-    widget = gtk_hbox_new (FALSE, 12);
-    gtk_box_pack_start (GTK_BOX (widget), label2, 0, 0, 0);
-
-    gtk_container_add (GTK_CONTAINER (tab), widget);
-    gtk_box_set_child_packing (GTK_BOX (tab), widget, FALSE, FALSE, 0, GTK_PACK_START);
-    
-    box = gtk_hbox_new (FALSE, 12);
-    align = gtk_alignment_new (0.12, 0.0, 0.0, 0.0);
-    gtk_container_add (GTK_CONTAINER (align), box);
-    gtk_container_add (GTK_CONTAINER (tab), align);    
-    gtk_box_set_child_packing (GTK_BOX (tab), align, FALSE, FALSE, 0, GTK_PACK_START);
-    
-	
-    widget = gtk_check_button_new_with_mnemonic (_("_Validity"));
-    seahorse_check_button_gconf_attach (GTK_CHECK_BUTTON (widget), SHOW_VALIDITY_KEY);
-    gtk_container_add (GTK_CONTAINER (box), widget);
-
-    widget = gtk_check_button_new_with_mnemonic (_("_Expires"));
-    seahorse_check_button_gconf_attach (GTK_CHECK_BUTTON (widget), SHOW_EXPIRES_KEY);
-    gtk_container_add (GTK_CONTAINER (box), widget);
-
-    widget = gtk_check_button_new_with_mnemonic (_("_Trust"));
-    seahorse_check_button_gconf_attach (GTK_CHECK_BUTTON (widget), SHOW_TRUST_KEY);
-    gtk_container_add (GTK_CONTAINER (box), widget);
-	
-    widget = gtk_check_button_new_with_mnemonic (_("T_ype"));
-    seahorse_check_button_gconf_attach (GTK_CHECK_BUTTON (widget), SHOW_TYPE_KEY);
-    gtk_container_add (GTK_CONTAINER (box), widget);
-	
-    gtk_widget_show_all (tab);
-    seahorse_prefs_add_tab (swidget, label, tab);
-    
-    if (tabid)
-        tab = glade_xml_get_widget (swidget->xml, tabid);
-    
-    seahorse_prefs_select_tab (swidget, tab);
+    if (tabid) {
+        tab = seahorse_widget_get_widget (swidget, tabid);
+        g_return_if_fail (tab);
+        seahorse_prefs_select_tab (swidget, tab);
+    }
 }
