@@ -1,3 +1,7 @@
+2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * POTFILES.in: Removed src/seahorse-preferences.*
+    
 2006-09-04  Nate Nielsen  <nielsen@memberwebs.com>
 
     * POTFILES.in: Removed libseahorse/seahorse-key-store.c
