@@ -1,4 +1,14 @@
-2006-09-08  Nate Nielsen  <nielsen@memberwebs.com>
+2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * src/Makefile.am:
+    * src/seahorse-key-manager.c:
+    * src/seahorse-key-manager.ui:
+    * src/seahorse-preferences.c:
+    * src/seahorse-preferences.glade (removed, hasn't been used):
+    * src/seahorse-preferences.h: Move 'view column' options into 
+    the 'View' menu. Remove a tab from preferences.
+    
+2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-passphrase.c: Close passphrase prompt on 
     <ESC> key press. Fixes #354332
